--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="letter">t</span><span
                class="letter">t</span><span class="letter">i</span>
      </h1>
-    <h2 class="subhead">Aspiring Front-End Engineer</h2>
+    <h2 class="subhead">Aspiring Front-End Developer</h2>
     <div class="lines"></div>
   </header>
   <div class="container container1">
