--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
   </div>
   <div class="grid">
     <div class="projectHolder">
+      <a href="https://kevlar2222.github.io/snake/" target="_blank"></a>
+      <div class="project project15"></div>
+      <div class="cover"><span class="projectTitle">2P Snake</span></div>
+    </div>
+    <div class="projectHolder">
       <a href="https://kevlar2222.github.io/tnw/" target="_blank"></a>
       <div class="project project1"></div>
       <div class="cover"><span class="projectTitle">Responsive TNW Clone</span></div>
@@ -128,11 +133,6 @@
       <a href="https://kevlar2222.github.io/Javascript_30/03%20-%20CSS%20Variables/index.html" target="_blank"></a>
       <div class="project project14"></div>
       <div class="cover"><span class="projectTitle">CSS Variables</span></div>
-    </div>
-    <div class="projectHolder">
-      <a href="https://kevlar2222.github.io/Javascript_30/15%20-%20LocalStorage/index.html" target="_blank"></a>
-      <div class="project project15"></div>
-      <div class="cover"><span class="projectTitle">Local Storage</span></div>
     </div>
     <div class="projectHolder">
       <a href="https://kevin-satti-projects.github.io/Projects/ToDo/dist/" target="_blank"></a>
