--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="letter">t</span><span
                class="letter">t</span><span class="letter">i</span>
      </h1>
-    <h2 class="subhead">Aspiring Front-End Developer</h2>
+    <h2 class="subhead">Front-End Developer</h2>
     <div class="lines"></div>
   </header>
   <div class="container container1">
@@ -42,8 +42,8 @@
     </div>
   </div>
   <div class="text">
-    Hi! I'm Kevin, an aspiring Front-End Engineer based in London. I have caught the coding bug and love to learn. I am self-taught 
-    (over the COVID-19 lockdown) and have some knowledge of HTML, CSS, Javascript and React.
+    Hi! I'm Kevin, a Front-End Developer based in London. I have caught the coding bug and love to learn. I am self-taught 
+    (over the COVID-19 lockdown) and have some knowledge of HTML, CSS, Javascript, React, Next.js and Prismic.
     <br>
     <br>
     If you're looking to hire a
